Changed route names to meet standard
